<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/litegrey"
    android:orientation="vertical"
    android:paddingBottom="-2dp" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hint_name"
            android:textColor="@color/liteblue_2"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/account_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_selector"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:paddingLeft="20dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/hint_email"
            android:textColor="@color/liteblue_2"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/account_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_selector"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/telephone"
            android:textColor="@color/liteblue_2" />

        <EditText
            android:id="@+id/account_phone_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_selector"
            android:ems="10"
            android:hint="@string/hint_tel_no"
            android:inputType="number"
            android:paddingLeft="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/account_privacy_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="right"
                android:paddingRight="15dp"
                android:text="@string/privacy_policy"
                android:textColor="#000" />

            <TextView
                android:id="@+id/account_tnc_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:text="@string/terms_and_condition"
                android:textColor="#000" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/account_save_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/lite_green"
        android:enabled="false"
        android:text="@string/redeem"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>