<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="true"
        android:background="@drawable/home_middle_shape"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <TextView
                android:id="@+id/popup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/nearly_there"
                android:textColor="@color/liteblue_1"
                android:textSize="17sp" />

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/liteblue_1" />

        <TextView
            android:id="@+id/popup_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/account_popup_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"
            android:textSize="15sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/acc_pop_later"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:text="@string/later"
                android:textColor="#000"
                android:textSize="16sp" />

            <View
                android:id="@+id/view1"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <Button
                android:id="@+id/acc_pop_setup"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:text="@string/setup"
                android:textColor="#000"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
