<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="true"
        android:background="@drawable/home_middle_shape"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/dialog_loyalty_code_title"
                android:textColor="@color/liteblue_1"
                android:textSize="17sp" />

        </RelativeLayout>

        <View
            android:id="@+id/dialog_lineview"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/liteblue_1" />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/qrmessage_dialog_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"
            android:textSize="15sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <Button
            android:id="@+id/message_dialog_ok"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:text="@string/ok"
            android:textColor="#000"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>
