<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".HomeActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/liteblue_1"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/home_header_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp" >

            <FrameLayout
                android:id="@+id/FrameLayout01"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="#5CBECB" >

                <ImageView
                    android:id="@+id/home_header_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/card_button" />
            </FrameLayout>

            <TextView
                android:id="@+id/home_header_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/FrameLayout01"
                android:text="@string/home_title"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_alignBottom="@id/FrameLayout01"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@id/home_header_title_textview"
                android:src="@drawable/drop_down_indicator" />
        </RelativeLayout>
    </LinearLayout>

    <com.JBCosemetics.jbscannerapp.views.NonSwipeableViewPager
        android:id="@+id/home_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1" />

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="165dp"
        android:layout_height="185dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:background="@color/liteblue_2"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/home_card_btn_imageview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="11dp"
            android:layout_weight="0.33"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:background="@color/liteblue_1"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/card_button" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/frameLayout1"
                android:text="@string/home_title"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/liteblue_1" />

        <RelativeLayout
            android:id="@+id/home_account_btn_imageview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="11dp"
            android:layout_weight="0.33"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp" >

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:background="@color/liteblue_1"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/account_button" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/frameLayout1"
                android:text="@string/my_account"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/liteblue_1" />

        <RelativeLayout
            android:id="@+id/home_map_btn_imageview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="11dp"
            android:layout_weight="0.33"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp" >

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:background="@color/liteblue_1"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/map_button" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/frameLayout1"
                android:text="@string/locations"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/liteblue_1" />
    </LinearLayout>

</RelativeLayout>